Split examples in two Gradle builds