@@ -10,22 +10,12 @@ repositories {
     mavenCentral()
 }
 
-sourceSets.create("generated")
+
 
 dependencies {
-    implementation("org.jspecify", "jspecify", "1.0.0")
+    implementation("com.sklogw.nylon", "bindings", "0.1")
+//    implementation(project("bindings"))
     implementation("io.github.jwharm.cairobindings", "cairo", "1.18.4.1")
-    implementation(sourceSets.named("generated").get().output)
-    testImplementation("io.kotest", "kotest-runner-junit5", "5.9.1")
-    testImplementation("io.kotest", "kotest-assertions-core", "5.9.1")
-}
-
-tasks.withType<Test> {
-    useJUnitPlatform()
-    jvmArgs(
-        "-ea",
-        "--enable-native-access=ALL-UNNAMED"
-    )
 }
 
 java {
@@ -41,10 +31,9 @@ kotlin.compilerOptions {
 }
 
 application {
-    mainClass.set("example.CairoBufferKt")
+    mainClass.set("example.wrap.SimpleKt")
     applicationDefaultJvmArgs = listOf(
         "-ea",
         "--enable-native-access=ALL-UNNAMED",
-//        "-Dforeign.restricted=permit",
     )
 }
